@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.appxi</groupId>
     <artifactId>appxi-javafx</artifactId>
-    <version>21.02.21</version>
+    <version>21.02.23</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -40,6 +40,8 @@
                     <compilerArgs>
                         <arg>--add-exports</arg>
                         <arg>javafx.web/com.sun.webkit=appxi.javafx</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.web/com.sun.webkit.event=appxi.javafx</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
